src/oid4vci/types/snapshots/credibil_vc__oid4vci__types__credential__tests__claim_label_display_default.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 760
expression: "&default"
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
