src/oid4vci/types/snapshots/credibil_vc__oid4vci__types__credential__tests__credential_format.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 579
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
format: jwt_vc_json
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
proof:
  proof_type: jwt
  jwt: SomeJWT
