src/oid4vci/types/snapshots/credibil_vc__oid4vci__types__credential__tests__credential_identifier.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 539
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proof:
  proof_type: jwt
  jwt: SomeJWT
